--- a/client/main.html
+++ b/client/main.html
@@ -6,7 +6,7 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #282c34;">
   <div class="render-target"></div>
 
   <!-- jQuery and JS bundle w/ Popper.js -->
